kubernetes-monitoring/web-app/web-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3 
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
#        image: isieiam/nginx-test:2.0
        image: itokareva/web:3.0
        livenessProbe:
          tcpSocket:
            port: 8000
#        readinessProbe:
#          httpGet:
#            path: /index.html
#            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
#      initContainers:
#      - name: init-web
#        image: busybox:1.31.0
#        command: ['sh', '-c', 'wget -O- https://tinyurl.com/otus-k8s-intro | sh']
#        volumeMounts:
#        - name: app
#          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
