kubernetes-monitoring/web-app/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web-svc 
    http:
      paths:
#      - path: /weba
      - path: /
        backend:
          serviceName: web-svc
          servicePort: 8000
